--- a/app/src/main/res/layout/powerbank_item.xml
+++ b/app/src/main/res/layout/powerbank_item.xml
@@ -1,66 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:padding="10dp"
-    android:clipToPadding="false"
-    android:clipChildren="false">
+    android:layout_margin="4dp"
+    android:orientation="vertical">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="15dp"
-        android:dividerHeight="0.0px"
-        android:clipToPadding="false"
-        android:clipChildren="false"
-        app:cardElevation="10dp"
-        app:cardPreventCornerOverlap="false">
+        android:orientation="horizontal"
+        android:padding="12dp">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/img_item_foto"
+            android:layout_width="84dp"
+            android:layout_height="84dp"
+            android:layout_marginRight="5dp"
+            android:scaleType="centerCrop"
+            app:civ_border_color="#0D000000"
+            app:civ_border_width="2dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="5dp">
+            android:orientation="vertical">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/img_item_foto"
-                android:layout_width="84dp"
-                android:layout_height="84dp"
-                android:scaleType="centerCrop"
-                app:civ_border_width="2dp"
-                app:civ_border_color="#0D000000"
-                android:layout_marginRight="5dp"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/tv_item_nama"
+                android:layout_width="25dp"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_marginLeft="5dp"
+                android:layout_marginBottom="4dp"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:textStyle="bold"
-                    android:textSize="18sp"
-                    android:id="@+id/tv_item_nama"
-                    android:layout_marginBottom="4dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"/>
-
-                <TextView
-                    android:textSize="16sp"
-                    android:ellipsize="end"
-                    android:maxLines="2"
-                    android:id="@+id/tv_item_deskripsi"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"/>
-
-            </LinearLayout>
+            <TextView
+                android:id="@+id/tv_item_deskripsi"
+                android:layout_width="25dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:textSize="16sp" />
 
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
-</LinearLayout>
+
+</androidx.cardview.widget.CardView>
